Refactor code, creating config class, creating test for services and controllers